fixing modal display on mobile landscape

--- a/stylesheets/mythic.css
+++ b/stylesheets/mythic.css
@@ -464,3 +464,9 @@ span.close {
     font-size: 1rem;
   }
 }
+
+@media screen and (orientation: landscape) {
+  .modal-content {
+    height: auto;
+  }
+}
